Fix of fixed img on iphone

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -236,7 +236,7 @@ nav a {
   =================== */ 
 .about{
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #575250;
     display: flex;
     justify-content: center;
@@ -369,6 +369,10 @@ nav a {
     .container-service{
         flex-direction: column;
 
+    }
+    .splash,
+    .services{
+        background-size: 300%;
     }
     .box{
         width: 80%;
